--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,68 +1,36 @@
-table { color: #cccccc;
-        width: 100%;
-}
-/*baseball pic size*/
-img {
-  border: 1px solid #ddd;
-  border-radius: 4px;
+/* Style the navbar */
+/* Navbar links */
+header {
+  background-color: #4aaaa5;
+  display: block;
   padding: 5px;
-  width: 150px;
-  height: 150px;
+  border: 10px;
+  text-align: center;
+  float: left;
+  height: 55px;
+  color: #777777
+}
+#navbar a {
+  float: right;
+  display: block;
+  background-color: white;
+  color: #777777;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+/* Page content */
+.content {
+  padding: 16px;
 }
 h1{
-  background-color: #4aaaa5;
-  color: #ffffff;
-  float: left;
-  text-align: center;
-  display: block;
-  width: 24%;
-}
-h2{
   color: #4aaaa5;
-}
-/* 1st slide starts here*/
-#navbar {
-    background-color: #ffffff;
-  }
-  #navbar a {
-    color: #777777;
-    float: right;
-    display: block;
-    text: #f2f2f2;
-    text-align: left;
-    padding: 30px;
+  float:clear;
+  padding: 70px;
 
-  }
-/*2nd slide starts*/ 
-input[type=text], select, textarea {
-  width: 100%; 
-  padding: 12px;  
-  border: 1px solid #ccc; 
-  box-sizing: border-box; 
-  margin-top: 6px; 
-  margin-bottom: 16px; 
-  resize: vertical 
 }
-input[type=submit] {
-  background-color: #4aaaa5;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+img{
+  height: 200px;
+  widows: 200px;
 }
-
-input[type=submit]:hover {
-  background-color; crimson;
-}
-/*last slide starts*/ 
-.container {
-  border: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-
-  .container {
-    float: right;
-    text-align: center;
-    color: white;
-    background-color: #4aaaa5;
