--- a/style.css
+++ b/style.css
@@ -55,18 +55,16 @@ float: right;
   margin-left: 8px;
   text-align: center;
 }
-.Hangman {
-  width: 
+#Hangman { 
+  float: left;
   margin-left: 40px;
 }
-.RPG {
-  float: left;
+#RPG {
+ clear: both;
  margin-right: 40px;
+ float: right;
 }
-
-
-
-  img {
-    width: 200px;
-    height: 200px;
-  }
+#Trivia {
+  clear: both;
+  float: left;
+}
